[package]
name = "mockchain-wallet-rs"
version = "0.1.0"
edition = "2021"
description = "A command-line interface for interacting with a mockchain network"
authors = ["Sourav Mishra <sourav.m.bt@gmail.com>"]
license = "MIT"
repository = "https://github.com/0xsouravm/mockchain-wallet-rs"
documentation = "https://docs.rs/mockchain-wallet-rs"
readme = "README.md"
keywords = ["blockchain", "wallet", "cryptocurrency", "cli"]
categories = ["command-line-utilities", "cryptography", "wallet", "mockchain"]

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
secp256k1 = { version = "0.27", features = ["rand"] }
structopt = "0.3"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.10"
